--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        
         <div class="modal">
 
-            <div class="closing" ><button class="closingBtn" >x</button></div>
+            <div class="closing" ><button id="closingBtn" >x</button></div>
 
             <input type="text" id="modalInput">
             <button id="modalBtn">Submit</button>
