--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div style="display: flex; justify-content: space-between;">
         <p>Increment step: <span id="step"></span></p>
-        <p id="user">Guest</p>
+        <p id="user" class="user">Guest</p>
     </div>
 
     <p id="count"></p>
